# COMP3940-2022-09

./: FileUploadServlet.java  GalleryServlet.java  GetListing.java  LoginServlet.java  MainServlet.java  SearchResults.java  SearchServlet.java  SigninServlet.java  web.xml
Assignment1/: FileUploadServlet.java  GetListing1.java  JavaWebSocketClient.java  ListOfPhotosServlet.java  LoginServlet.java  UploadServlet1.java
Assignment1/html/: fileUpload.html  gallery.html
Assignment2/: ContributionNotes.docx  README.txt
Assignment2/A2DesignReference/ConsoleApp/: UploadClient1.java
Assignment2/A2DesignReference/UploadServer/: UploadServer.java  UploadServerThread.java  UploadServlet.java
Assignment2/ConsoleApp/: UploadServerThread.java  UploadServlet.java  UploadServlet.java.bak
Assignment2/WebApp/: UploadClient.java  UploadClient0.java  UploadServerThread.java  UploadServlet.java  fileUpload.html
Assignment3/: ContributionNotesAssignment3.docx  README.txt
Assignment3/Assignment3_ConsoleApp/: ServerSocket.cpp  UploadClient.cpp  UploadClient.h  UploadClientj.cpp
Assignment3/Assignment3_WebApp/: CMakeLists.txt  HttpServlet.h  HttpServletRequest.cpp  HttpServletRequest.h  HttpServletResponse.cpp  HttpServletResponse.h  ServerSocket.cpp  Socket.cpp  UploadServlet.cpp  UploadServlet.h  client  fileUpload.html  main.cpp  server  socketclient.c
html/: index.html  main.jsp  search.html
